--- a/index.html
+++ b/index.html
@@ -1,2 +1,25 @@
-<h1>这是一个标题</h1>
-<p>afaafhgoahgajg</p>
+<<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <style media="screen">
+
+    h1{
+      font-size: 18px;
+      color: bule;
+
+    }
+    p{
+  background: yellow;
+    }
+  </style>
+</head>
+<body>
+  <h1>这是一个文档</h1>
+  <p>真正的才智是刚毅的志向。 —— 拿破仑</p>
+
+</body>
+</html>
