--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
     p{
   background: yellow;
     }
+    .p_1{
+      font-weight: bold;
+      color: bule;
+    }
   </style>
 </head>
 <body>
   <h1>这是一个文档</h1>
   <p>真正的才智是刚毅的志向。 —— 拿破仑</p>
+  <p class="p_1">真理惟一可靠的标准就是永远自相符合。 —— 欧文</p>
 
 </body>
 </html>
